# python_btc_20

./: .flake8  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  database.py  main.py  requirements.txt
backend/crud/: crud_produtos.py
backend/models/: models_produtos.py
backend/routers/: router_produto.py
backend/schema/: schema_produtos.py
frontend/: Dockerfile  app.py
