[tool.poetry]
name = "python-btc-20"
version = "0.1.0"
description = ""
authors = ["Jean Torre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^3.8.0"
black = "^24.8.0"
sqlalchemy = "^2.0.34"
datetime = "^5.5"
pytz = "^2024.1"
pydantic = "^2.9.0"
psycopg2-binary = "^2.9.9"
fastapi = {extras = ["standard"], version = "^0.114.0"}
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
